# diffractix

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb  test.py
optics/: beams.py  core.py  elements.py  simulation.py  system.py
src/diffractix/: __init__.py  beam.py  beams.py  core.py  elements.py  simulation.py  system.py
src/diffractix/composites/: 4f.py  __init__.py  sequence.py  slab.py  thick_lens.py
src/diffractix/core/: optimizer.py
src/diffractix/elements/: __init__.py  abcd.py  aperture.py  base.py  dielectric_interface.py  element.py  interface.py  mirror.py  sequence.py  slab.py  space.py  thick_lens.py  thin_lens.py
src/diffractix/graph/: __init__.py  ast.py  compile.py  ops.py
tests/: test_ast.py  test_ast_compile.py  test_ast_integration.py  test_ast_nodes.py  test_composites.py  test_elements.py  test_gaussian_beam.py  test_integration_elements_ast.py  test_simulation.py  test_system.py
