[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffractix"
version = "0.1.0"
dependencies = [
    "autograd",
    "numpy",
    "matplotlib",
    "jupyter",
    "notebook",
    "scipy"
]

# run uv pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]